src/css/_base.css
html {
  --color-bg: #bcbfc3;
  --Text-main: #515050;
  --color-text-main: #515050;
  --color-text-secondary: #000000;
  --color-blue: #279ef8;
  --color-yellow: #f8af27;
  --color-green: #12965d;
  --color-red: #F82727;
}
html[data-theme="dark"] {
  --color-bg: #bcbfc3;
  --color-text-main: #f7f6f6;
  --color-text-secondary: #ffffff;
}
html[data-theme="light"] #light-mode-btn {
  display: none;
}

html[data-theme="dark"] #dark-mode-btn {
  display: none;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
}

img,
video {
  display: block;
}

h1{
  color: var(--Text-main, #515050);
font-family: "Caesar Dressing";
font-size: 32px;
}
main{
  display: flex;
width: 393px;
padding: 0 12px;
flex-direction: column;
align-items: flex-end;
gap: 20px;
}
/*
.row + .row {
  margin-top: 16px;
}

.row > .col,
.row > [class^="col-"] {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: rgba(86, 61, 124, 0.15);
  border: 1px solid rgba(86, 61, 124, 0.2);
}

